syntax = "proto3";

package ru.otus.numbers;

option java_multiple_files = true;

service NumbersService {
  rpc GetNumbers(NumberRequest) returns (stream NumberResponse) {}
}

message NumberRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 currentValue = 1;
}